# start-lang

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  build.rs  build.sh  dune-project  start_lang.opam  test.st  tests.st
.github/workflows/: ci.yml  formatter.yml  test.yml
assets/: stdlib.st  theme.yml
doc/: Grammar.md  Semantic.md  Theme.md  Typing.md  utils.md
lib/: dune
lib/Utils/: dune  pretty.ml
lib/ast/: Constant.ml  Constant.mli  Definition.ml  Definition.ml.back  Definition.mli  Definition.mli.back  Expr.ml  Expr.mli  Expression.ml  Expression.mli  Ident.mli  Location.ml  Location.mli  Pattern.ml  Pattern.ml.back  Pattern.mli  Pattern.mli.back  PatternArg.ml.back  PatternArg.mli.back  Program.ml  Program.ml.back  Program.mli  Program.mli.back  Type.ml  Type.mli  dune
lib/error/: Cathegory.ml  Error.ml  ErrorBuilder.ml  ErrorStack.ml  Lexing.ml  Lexing.mli  LinesError.ml  LocationError.ml  Parsing.ml  Parsing.mli  PositionError.ml  Utils.ml  dune
lib/error/ast/: Errors.ml  Expression.ml  Expression.mli  Unknown.ml  ast.ml
lib/error/frontend/: Lexer.ml  Parse.ml  Parse.mli  Parser.ml  Parser.mli  frontend.ml
lib/frontend/: Ast.ml  Frontend.ml  Parse.ml  Parse.mli  ParseTree.ml  ParserMessages.messages  dune  lexer.mll  parser.conflicts  parser.messages  parser.mly
lib/inputUtils/: Inputs.ml  Inputs.mli  Location.ml  Location.mli  Position.ml  Position.mli  dune
lib/st_Stdlib/: St_Unit.ml  std_lib.mli
lib/st_stdlib/: St_Bool.ml  St_Char.ml  St_Int.ml  St_String.ml  dune  std_lib.ml
lib/typing/: Env.ml  Ident.ml  Type.ml  Type.mli  TypeEnv.ml  dune
lib/utils/: dune  printing.ml
src/: args.rs  ast.rs  error.rs  error2.rs  frontend.rs  interpret.rs  lib.rs  location.rs  location2.rs  main.rs  parser.rs  repl.rs  stdlib.rs  typing.rs
src/ast/: constant.rs  definition.rs  definition_expression.rs  definition_ty.rs  definitions_or_expression.rs  expression.rs  ident.rs  mod.rs  pretty_print.rs  program.rs  ty.rs
src/common/: mod.rs
src/common/file_interpreter/: error.rs  interpreter.rs  mod.rs
src/common/format/: error.rs  formatter.rs  mod.rs
src/common/interpreter/: error.rs  file.rs  interpret.rs  mod.rs
src/common/lexer/: error.rs  lexing.rs  meta.rs  token.rs
src/common/lsp/: backend.rs  document.rs  interpreter.rs  mod.rs  position_memo.rs
src/common/parser/: parsing.rs
src/common/repl/: interpreter.rs  summary.rs
src/common/typer/: env.rs  error.rs  mod.rs  type_ast.rs
src/common/utils/: error.rs  location.rs  mod.rs  theme.rs
src/common/vm/: env.rs  identifier.rs  mod.rs
src/file_interpreter/: error.rs  interpreter.rs  mod.rs
src/format/: diff.rs  error.rs  formatter.rs
src/formatter/: error.rs  interpreter.rs  mod.rs  parsed_file.rs
src/frontend/: error.rs  expression.rs  lexer.rs  notation.rs  parser.rs
src/frontend/lexer/: combinator.rs  error.rs  lexer.rs  position.rs  rule.rs  simple_lexer.rs  token.rs  token_combinator.rs  utils.rs
src/frontend/notation/: notation_env.rs  notation_group.rs  notation_rule.rs  rule.rs  utils.rs
src/frontend/parser/: env.rs  grammar.rs  node.rs
src/interpreter/: env.rs  error.rs  eval.rs  file.rs  flag.rs  interpret.rs  interpreter.rs  mod.rs  repl.rs  summary.rs  value.rs
src/lexer/: comment.rs  error.rs  lex.rs  lexing.rs  meta.rs  mod.rs  token.rs
src/lsp/: backend.rs  interpreter.rs  mod.rs  position_memo.rs
src/parser/: ast.rs  env.rs  error.rs  incremental.rs  iter_node.rs  mod.rs  parse.rs  parse_tree.rs  parser.rs  parsing.rs  rule.rs  utils.rs
src/repl/: interpreter.rs  mod.rs  summary.rs
src/stdlib/: mod.rs  number_n.rs
src/typer/: error.rs  type_ast.rs
src/typing/: ast.rs  env.rs  error.rs  from_parser.rs  infer_type.rs  mod.rs  typer.rs
src/utils/: colored.rs  debug.rs  error.rs  fresult.rs  location.rs  mod.rs  parse_yml_theme.rs  pretty.rs  theme.rs  writer.rs
src/vm/: env.rs  eval.rs  identifier.rs  mod.rs  value.rs
test/: dune  tests_start_lang.ml
test/ast/: constant.ml  dune  tests.ml  utils.ml  variable.ml
test/error/: dune  lexing.ml  parsing.ml  test_ast.ml  test_lexer.ml  tests.ml  utils.ml
test/parsing/: Expression.ml  Pattern.ml  S_Lambda_Calculus.ml  Type.ml  dune  tests.ml  utils.ml
test/test_utils/: LoadFile.ml  dune  parse.ml
tests/: bad_permission.rs  cli_tests.rs  file_unreadable.rs  integration_tests.rs  lsp.rs  utils.rs
tests/interpreter/: error.rs  number_n.rs  utils.rs  var.rs
tests/lsp_tests/: diagnostic.rs  hover.rs  initialize.rs  mod.rs  shutdown.rs  test_context.rs
tests/parser/: error.rs  mod.rs  number_n.rs  ty.rs  utils.rs  var.rs
tests/typing/: error.rs  mod.rs  number_n.rs  ty.rs  utils.rs
tree-sitter-start/: Cargo.toml  Makefile  Package.swift  Readme.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
tree-sitter-start/common/: common.mak
(+384 files in other folders)
