[package]
name = "startlang"
version = "0.0.1"
edition = "2021"

[build-dependencies]
cc="*"

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
clap = { version = "4.5.17", features = ["derive"] }
color-print = "0.3.6"
colored = "2.1.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
pretty = "0.12.3"
rustyline = "14.0.0"
tree-sitter = "0.22"
tree-sitter-start = { path = "./tree-sitter-start" }
yaml-rust = "0.4.5"
