[package]
name = "startlang"
version = "0.0.1"
edition = "2021"

[build-dependencies]
cc="*"
glob = "0.3.1"

[dev-dependencies]
trycmd = "0.15.9"

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = "0.10.1"
color-print = "0.3.6"
colored = "2.1.0"
num-bigint = "0.4.6"
pretty = "0.12.3"
rustyline = "14.0.0"
