(library
 (name frontend)
 (libraries ast menhirLib)
 ;(link_deps ParserMessages.check)
 )

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --strict --table)
 (infer true))


;; The following two rules create a copy of the file parser.mly named
;; unitActionsParser.mly. This is a copy of the grammar where the semantic
;; actions have been removed and replaced with unit values. It is compiled
;; by Menhir's table back-end to obtain the module UnitActionsParser.

;; The use of [--external-tokens Parser] is required for the two parsers
;; to share a single [token] type. This makes them usable with the same
;; lexer.

(rule
  (action
    (with-stdout-to unitActionsParser.mly
      (run menhir
        %{dep:parser.mly}
        --only-preprocess-u
))))

(menhir
  (modules unitActionsParser)
  (flags --table --external-tokens Parser)
)


;; This section deals with the .messages file.

;; The following rule generates "parserMessages.ml" based on the source file
;; "parserMessages.messages". It requires the completeness check to have been
;; performed first. (If desired, this check could be disabled.)

(rule
  (deps ParserMessages.check)
  (action (with-stdout-to ParserMessages.ml
    (run menhir
      %{dep:parser.mly}
      --compile-errors %{dep:ParserMessages.messages}
    )
  ))
)

;; This rule generates a file "parserMessages.auto.messages" that contains a
;; list of all error states. It is used by the completeness check.

(rule
  (with-stdout-to ParserMessages.auto.messages
    (run menhir
       %{dep:parser.mly}
       --list-errors
    )
  )
)

;; This rule implements the completeness check. It checks that every error
;; state listed in the auto-generated file "parserMessages.auto.messages"
;; is also listed in the file "parserMessages.messages" that is maintained
;; by the programmer.

(rule
  (with-stdout-to ParserMessages.check
  (run menhir
    %{dep:parser.mly}
    --compare-errors %{dep:ParserMessages.auto.messages}
    --compare-errors %{dep:ParserMessages.messages}
  ))
)
