(library
 (name frontend)
 (libraries menhirLib InputUtils error zarith)
 (instrumentation
  (backend bisect_ppx)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --strict --table)
 (infer true))

(rule
 (with-stdout-to
  parserMessages.check
  (run
   menhir
   %{dep:parser.mly}
   --compare-errors
   %{dep:parser.auto.messages}
   --compare-errors
   %{dep:parser.messages})))

(rule
 (deps parserMessages.check)
 (action
  (with-stdout-to
   parserMessages.ml
   (run menhir %{dep:parser.mly} --compile-errors %{dep:parser.messages}))))

(rule
 (with-stdout-to
  parser.auto.messages
  (run menhir %{dep:parser.mly} --list-errors)))
